# diopside-v7

./: .gitignore  .prototools  AGENTS.md  README.md  Taskfile.yml  package-lock.json  package.json
backend/: .coverage  README.md  pyproject.toml  requirements-lambda.txt
backend/data/: tag-corrections-v3.json  usage-decisions-v1.json
backend/data/public/: latest.json
backend/docs/api/: generation-registry.gen.json  openapi.gen.json  public-contracts.gen.md  public-contracts.manual.json
backend/schemas/: tag-correction-ledger-v3.schema.json  tag-snapshot-v3.schema.json  usage-decision-ledger-v1.schema.json
backend/src/app/: __init__.py  main.py
backend/src/app/apis/: __init__.py  deps.py
backend/src/app/collectors/: __init__.py  youtube.py
backend/src/app/contracts/: __init__.py  public.py
backend/src/app/core/: config.py
backend/src/app/exporter/: __init__.py  publisher.py
backend/src/app/operations/: __init__.py  policy.py
backend/src/app/processing/: __init__.py  pipeline.py
backend/src/app/runtime/: __init__.py  handlers.py  jobs.py
backend/src/app/scripts/: admin.py  build_received_release.py  build_release.py  collect_youtube.py  migrate_tags.py  (+2 more)
backend/src/tools/: __init__.py  app_docs.py  check_architecture.py
backend/tests/: test_atomic_publisher.py  test_contract_loader.py  test_japanese_content.py  test_main.py  test_operations_policy.py  test_processing_pipeline.py  test_runtime_handlers.py  test_runtime_jobs.py  test_tag_schema.py  test_tagging_pipeline.py  test_youtube_collector.py
backend/tests/tools/: test_app_docs.py
(+250 files in other folders)
